# entity_resolution

./: README.md  pyproject.toml
entity_resolution/: app.py
entity_resolution/entity_types/: individual.py  record.py  resolved_entity.py
entity_resolution/resolver/: resolution_configuration.py  resolver.py  resolver_state.py
tests/: test_data.py
tests/entity_types/: test_resolved_entity.py
tests/resolver/: resolver.py
