[tool.poetry]
name = "entity-resolution"
version = "0.1.0"
description = ""
authors = ["bjk95 <bradley.kester@barcelonagse.eu>"]
readme = "README.md"
packages = [{include = "entity_resolution"}]

[tool.poetry.dependencies]
python = "^3.11"
nanoid = "^2.0.0"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
uvicorn = "^0.34.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
